infrastructure/templates/frontend/02-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: kanban-frontend-service
spec:
 selector:
  app: kanban-frontend
 ports:
 - name: kanban-frontend-port
   port: 3000
   targetPort: 3000
