infrastructure/templates/frontend/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanban-frontend
  labels:
    name: kanban-frontend
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kanban-frontend-service
              port: 
                number: 3000
